# Yconvert

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
include/Yconvert/: CodePointIterator.hpp  CodepointIterator.hpp  ConversionException.hpp  Convert.hpp  Converter.hpp  Encoding.hpp  EncodingChecker.hpp  Endian.hpp  ErrorHandlingPolicy.hpp  ErrorPolicy.hpp  Utf32Iterator.hpp  Yconvert.hpp  YconvertDefinitions.hpp
include/Yconvert/Details/: InputStreamWrapper.hpp
src/Yconvert/: CodePageDecoder.cpp  CodePageDecoder.hpp  CodePageDefinitions.hpp  CodePageEncoder.cpp  CodePageEncoder.hpp  CodePointIterator.cpp  CodepointIterator.cpp  Convert.cpp  Converter.cpp  Decoder.cpp  Decoder.hpp  DecoderBase.cpp  DecoderBase.hpp  Encoder.cpp  Encoder.hpp  EncoderBase.cpp  EncoderBase.hpp  Encoding.cpp  EncodingChecker.cpp  Iterator.cpp  Iterator.hpp  MakeEncodersAndDecoders.cpp  MakeEncodersAndDecoders.hpp  Utf16Decoder.hpp  Utf16Encoder.hpp  Utf32Decoder.hpp  Utf32Encoder.hpp  Utf32Iterator.cpp  Utf8Decoder.cpp  Utf8Decoder.hpp  Utf8Encoder.cpp  Utf8Encoder.hpp  YconvertThrow.hpp  YconvertVersion.hpp.in
src/Yconvert/Details/: InputStreamWrapper.cpp
tests/YconvertTest/: CMakeLists.txt  test_CodePointIterator.cpp  test_CodepointIterator.cpp  test_Convert.cpp  test_Converter.cpp  test_Encoding.cpp  test_Endian.cpp  test_Utf16Decoder.cpp  test_Utf16Encoder.cpp  test_Utf32Encoder.cpp  test_Utf32Iterator.cpp  test_Utf8Decoder.cpp  test_Utf8Encoder.cpp
tools/codepages/: make_codepage_file.py
